--- a/index-2.html
+++ b/index-2.html
@@ -11,7 +11,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Faheem's Module 4 Solution</h1>
-  <h3>Inspect the page and checkout the Console in the Developer Tools.</h3>
+  <h1>This is MODULE 4 Solution-"FAHEEM'S</h1>
+  <h3>You can Checkout the Console in the Developer Tools.</h3>
 </body>
 </html>
